--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </div>
     <div id="contentDiv" align="center">
       <br>
-      <img src="banner.png" alt="banner" style="width:95%;">
+      <img src=".\banner.png" alt="banner" style="width:95%;">
       <div id="projectsDiv"></div>
     </div>
     <!-- import scripts-->
-  <script type="text/javascript" src=".\Project.js"></script>
+  <script type="text/javascript" src=".\Objects.js"></script>
   <script type="text/javascript" src=".\Main.js"></script>
 
   </head>
