--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="contentDiv" align="center">
       <br>
-      <img src="banner.png" alt="banner" style="width:95%; height: 11.26%">
+      <img src="banner.png" alt="banner" style="width:95%;">
       <div id="projectsDiv"></div>
     </div>
     <!-- import scripts-->
