--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 
 <html>
   <head>
+    <title>Caitlyn</title>
+    <body background="stripe_background.png">
     <style>
       @import url("./Styles.css");
     </style>
+    <link rel="icon" href=".\logo.png">
     <div id="navMenuDiv">
       <button class="menuButton">Intro</button>
       <button class="menuButton">Projects</button>
@@ -16,8 +19,8 @@
       <div id="projectsDiv"></div>
     </div>
     <!-- import scripts-->
-  <script type="text/javascript" src=".\Objects.js"></script>
+  <script type="text/javascript" src=".\Project.js"></script>
   <script type="text/javascript" src=".\Main.js"></script>
-
+</body>
   </head>
 </html>
