--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
       @import url("./Styles.css");
     </style>
     <link rel="icon" href=".\logo.png">
+    <div style="position: fixed; width:100%; align:center;" id="fixedContentDiv">
     <div id="navMenuDiv">
       <button class="menuButton">Intro</button>
       <button class="menuButton">Projects</button>
       <button class="menuButton">Gallery</button>
       <button class="menuButton">Contact</button>
     </div>
+  </div>
     <div id="contentDiv" align="center">
       <br>
+      <div id="header" style="height:50px"></div>
       <img src="Banner.png" alt="banner" style="width:95%;">
       <div id="projectsDiv"></div>
+      <div id="footer" style="height:100%"></div>
     </div>
     <!-- import scripts-->
   <script type="text/javascript" src=".\Project.js"></script>
