--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <!-- title page-->
               <b style="magin-top:20px">Page in development</b>
       <div class="DarkBackground AlignCenter" id="titlePageDiv" align="center">
-        <span class="Parentheses LightTextColor" id="openParentheses"><</span>
-        <span class="Parentheses LightTextColor" id="closeParentheses">/></span><br>
+        <span class="Parentheses WhiteTextColor" id="openParentheses"><</span>
+        <span class="Parentheses WhiteTextColor" id="closeParentheses">/></span><br>
         <div class="FlexBox">
           <div id="titlePageContent" align="center">
-            <span class="ColorTextColor MediumText TitlePageItem"> Caitlyn Milne </span><br>
-            <span class="LightTextColor MediumLargeText Fade TitlePageItem"> Software Developer </span>
-            <div class="TitlePageItem" id="skillsDiv"></div>
+            <span class="LightTextColor MediumText TitlePageItem Fade1"> Caitlyn Milne </span><br>
+            <span class="WhiteTextColor MediumLargeText Fade1 TitlePageItem"> Software Developer </span>
+            <div class="TitlePageItem Fade" id="skillsDiv"></div>
           </div>
         </div>
       </div>
