--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         @import url("./style.css");
       </style>
       <!-- title page-->
-              <b style="magin-top:20px">Page in development</b>
+      <b style="magin-top:20px">Page in development</b>
       <div class="DarkBackground AlignCenter" id="titlePageDiv" align="center">
-        <span class="Parentheses WhiteTextColor" id="openParentheses"><</span>
-        <span class="Parentheses WhiteTextColor" id="closeParentheses">/></span><br>
+        <span class="Parentheses OffWhiteTextColor" id="openParentheses"><</span>
+        <span class="Parentheses OffWhiteTextColor" id="closeParentheses">/></span><br>
         <div class="FlexBox">
           <div id="titlePageContent" align="center">
-            <span class="LightTextColor MediumText TitlePageItem Fade1"> Caitlyn Milne </span><br>
-            <span class="WhiteTextColor MediumLargeText Fade1 TitlePageItem"> Software Developer </span>
+            <span class="ColorTextColor MediumText TitlePageItem Fade0"> Caitlyn Milne </span><br>
+            <span class="OffWhiteTextColor MediumLargeText Fade1 TitlePageItem"> Software Developer </span>
             <div class="TitlePageItem Fade" id="skillsDiv"></div>
           </div>
         </div>
