--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
       <div class="DarkBackground AlignCenter" id="titlePageDiv" align="center">
         <span class="Parentheses OffWhiteTextColor" id="openParentheses"><</span>
         <span class="Parentheses OffWhiteTextColor" id="closeParentheses">/></span><br>
+        <span class="OffWhiteTextColor Fade0 MediumSmall2Text" id="contactDetails">Caitlynmilne2001@gmail.com 07563110345</span><br>
         <div class="FlexBox">
-          <div id="titlePageContent" align="center">
+          <div id="titlePageContent" align="center" class="FlexContainer">
             <span class="ColorTextColor MediumText TitlePageItem Fade0"> Caitlyn Milne </span><br>
             <span class="OffWhiteTextColor MediumLargeText Fade1 TitlePageItem"> Software Developer </span>
             <div class="TitlePageItem Fade" id="skillsDiv"></div>
           </div>
         </div>
       </div>
-      <div id="projectsNavDiv">
+      <div id="projectsDiv">
+        <div class="FlexBox">
+          <div class="FlexContainer">
+            <span class="OffWhiteTextColor MediumText">Projects</span>
+            <div id="projectsNavDiv"></div>
+          </div>
+        </div>
       </div>
       <!--footer-->
       <div class="footer">
