--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <!-- import scripts-->
       <script type="text/javascript" src=".\constants.js"></script>
-      <script type="text/javascript" src=".\project.js"></script>
+      <script type="text/javascript" src=".\Project.js"></script>
       <script type="text/javascript" src=".\main.js"></script>
     </body>
   </head>
