Styles Wrong name
fixed the wrong name for styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <style>
-  @import url("./Styles.css");
+  @import url("./styles.css");
 </style>
 <body>
   <div id="contentDiv" >
