--- a/index.html
+++ b/index.html
@@ -6,20 +6,29 @@
 </style>
 <body>
   <div id="contentDiv" >
-    <span style="width:100%;background-color:#808080;text-align:center;color:white">Website under development</span>
     <div class="navBar" id="navBar">
-    <br><br>
-    <span class="navBarTitle">Caitlyn Milne</span>
-    <hr>
-    <span class="navBarItem">About me</span>
-    <span class="navBarSubTitle">Projects</span>
-    <hr>
-    <div id="navProjectsSection"></div>
-    <span class="navBarSubTitle">Skills</span>
-    <hr>
-    <div id="navSkillsSection"></div>
+      <div class="customScrollbar track" id = "navBarTrack">
+        <span class="customScrollbar thumb" id = "navBarThumb"></span>
+      </div>
+      <div id="navContent">
+        <br><br>
+        <img src="Logo.png" alt="logo" id="navLogo">
+        <span class="largeText centredText">Caitlyn Milne</span>
+        <span class="defaultText centredText fade08">caitlynmilne2001@gmail.com</span>
+        <span class="defaultText centredText fade08">+447563110345</span>
+        <br>
+        <hr>
+        <span class="navBarItem" id = "aboutMeNavItem"style="display:none">About me</span>
+        <span class="navBarSubTitle">Projects</span>
+        <hr>
+        <div id="navProjectsSection"></div>
+        <span class="navBarSubTitle">Skills</span>
+        <hr>
+        <div id="navSkillsSection"></div>
+      </div>
     </div>
   </div>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src=".\skills.js"></script>
   <script type="text/javascript" src=".\Project.js"></script>
   <script type="text/javascript" src=".\projects.js"></script>
