--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
     <div id="page_content_parent">
       <div id="page_content">
         page under development
-        <div id="title_div">
+        <div id="about_me_div">
           <span class="title_text">Caitlyn Milne</span> <br>
-          <span class="opacity title_text">Programmer</span>
+          <span class="opacity title_text">Programmer</span><br><br>
+          <span class="textsize1p5">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
+          Join me in my development journey!</span>
+        </div>
+        <div id="skills_div" class="hidden">
+          Website in development
+          Watch this space
         </div>
       </div>
     </div>
@@ -28,10 +34,10 @@
           <a class="nav-link" href="#!">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!">Languages and Skills</a>
+          <a class="nav-link" href="#!" id="skills_nav_item" >Languages and Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#!">About me</a>
+          <a class="nav-link active" href="#!" id="about_me_nav_item">About me</a>
         </li>
       </ul>
     </div>
