--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   <body>
     <div id="page_content_parent">
       <div id="page_content">
-        page under development
-        <div id="about_me_div">
-          <span class="title_text">Caitlyn Milne</span> <br>
-          <span class="opacity title_text">Programmer</span><br><br>
-          <span class="textsize1p5">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
+        <div id="about_me_div" class="center">
+          <span class="title_text centered_item">Caitlyn Milne</span> <br>
+          <span class="opacity title_text centered_item">Programmer</span><br><br>
+          <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
           Join me in my development journey!</span>
         </div>
         <div id="skills_div" class="hidden">
