--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </li>
       </ul>
     </div>
+    <div id="loading_div" style="background-color:black; position:absolute; top:0; bottom:0; left:0; right:0;">  </div>
   </body>
 
   <!--scripts-->
