--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
           <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
           Join me in my development journey!</span>
         </div>
-        <div id="skills_div" class="hidden">
-          Website in development
-          Watch this space
+        <div id="contacts_div" class="hidden">
+          email: me@caitlynmilne.com <br>
+          phone: +44 7563110345 <br>
+          Domain and code are owned by caitlyn milne
         </div>
+          <div style="position:fixed; bottom:1vh; right: 1vw;"> website in development </div>
       </div>
     </div>
     <div id="side_bar" class="rotate">
       <ul class="nav justify-content-center grey lighten-4 py-4 ">
         <li class="nav-item">
-          <a class="nav-link" href="#!">Contact</a>
+          <a class="nav-link" href="#!" id="contacts_nav_item">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!">Projects</a>
+          <a class="nav-link disabled" href="#!" id="projects_nav_item">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!" id="skills_nav_item" >Languages and Skills</a>
+          <a class="nav-link disabled" href="#!" id="skills_nav_item" >Languages and Skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#!" id="about_me_nav_item">About me</a>
