--- a/index.html
+++ b/index.html
@@ -18,16 +18,35 @@
           <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
           Join me in my development journey!</span>
         </div>
+        <div id="skills_div">
+          <div id="skills_sticky_header" class="sticky_header textsize3">Skills</div>
+          <span id="skills_snap_gap"></span><br>
+          <span class="gap"></span>
+          <span class="textsize2">HTML CSS and JS</span> <br>
+          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have at my code on the developer tools.</span> <br><br>
+          <span class="gap"></span>
+          <span class="textsize2">PHP and SQL</span><br>
+          <span class="textsize1p5 textgrey">As a part of work ive had to use PHP and SQL. This was when needing to run C.R.U.D statements for a website and an app. I also used PHP to hide sensitive information / functionality from a user.</span> <br><br>
+          <span class="gap"></span>
+          <span class="textsize2">Android and java</span><br>
+          <span class="textsize1p5 textgrey">I have done lots of work on java when creating android apps, as such android and java has become my most comfortable skills</span><br><br>
+          <span class="gap"></span>
+          <span id="skills_page_end_marker"></span><br>
+          <span class="textsize2">C# and game development</span><br>
+          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language.</span>
+
+        </div>
         <div id="contacts_div" class="hidden">
           email: me@caitlynmilne.com <br>
           phone: +44 7563110345 <br>
           Domain and code are owned by caitlyn milne
         </div>
+        <span id="contacts_page_background"></span>
           <div style="position:fixed; bottom:1vh; right: 1vw;"> website in development </div>
       </div>
     </div>
     <div id="side_bar" class="rotate">
-      <ul class="nav justify-content-center grey lighten-4 py-4 ">
+      <ul class="nav justify-content-center grey lighten-4 py-4">
         <li class="nav-item">
           <a class="nav-link" href="#!" id="contacts_nav_item">Contact</a>
         </li>
@@ -35,7 +54,7 @@
           <a class="nav-link disabled" href="#!" id="projects_nav_item">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#!" id="skills_nav_item" >Languages and Skills</a>
+          <a class="nav-link" href="#!" id="skills_nav_item">Languages and Skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="#!" id="about_me_nav_item">About me</a>
