--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           Join me in my development journey!</span>
         </div>
         <div id="skills_div">
-          <div id="skills_sticky_header" class="sticky_header textsize3 stuck">Skills</div>
-          <div id="fake_skills_sticky_header" class="sticky_header textsize3 fake">Skills</div>
+          <div id="skills_sticky_header" class="sticky_header textsize3 stuck">Languages and Skills</div>
+          <div id="fake_skills_sticky_header" class="sticky_header textsize3 fake">Languages and Skills</div>
           <span class="gap"></span>
           <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
           <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have at my code on the developer tools.</span> <br><br>
