--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="fake_skills_sticky_header" class="sticky_header textsize3 fake">Languages and Skills</div>
           <span class="gap"></span>
           <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
-          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have at my code on the developer tools.</span> <br><br>
+          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code on the developer tools.</span> <br><br>
           <span class="gap"></span>
           <span class="textsize2">PHP and SQL</span><br>
           <span class="textsize1p5 textgrey">As a part of work ive had to use PHP and SQL. This was when needing to run C.R.U.D statements for a website and an app. I also used PHP to hide sensitive information / functionality from a user.</span> <br><br>
