--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="author" content="Caitlyn Milne">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> this can be readded when i fix phone scaling properally-->
     <meta name="description" content="Caitlyn Milne is a apprentice programmer from worcestershire england, which experience in: web design, app development, game development, PHP, SQL (Sequal), HTML, CSS, Javascript (JS), C# (Csharp Cs) and Java">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
@@ -27,7 +27,7 @@
           <div id="fake_skills_sticky_header" class="sticky_header textsize3 fake">Languages and Skills</div>
           <span class="gap"></span>
           <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
-          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code on the developer tools.</span> <br><br>
+          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code at https://github.com/Caitlyn-Milne/Portfolio</span> <br><br>
           <span class="gap"></span>
           <span class="textsize2">PHP and SQL</span><br>
           <span class="textsize1p5 textgrey">As a part of work ive had to use PHP and SQL. This was when needing to run C.R.U.D statements for a website and an app. I also used PHP to hide sensitive information / functionality from a user.</span> <br><br>
@@ -35,7 +35,7 @@
           <span class="textsize2">Android and java</span><br>
           <span class="textsize1p5 textgrey">I have done lots of work on java when creating android apps, as such android and java has become my most comfortable skills</span><br><br>
           <span class="gap"></span>
-          <span id="skills_page_end_marker"></span><br>
+          <span id="skills_page_title_exit_marker"></span><br>
           <span class="textsize2">C# and game development</span><br>
           <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language.</span>
 
