--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           Join me in my development journey!</span>
         </div>
         <div id="skills_div">
-          <div id="skills_sticky_header" class="sticky_header textsize3 stuck">Languages and Skills</div>
-          <div id="fake_skills_sticky_header" class="sticky_header textsize3 fake">Languages and Skills</div>
+          <div id="skills_sticky_header_stuck" class="sticky_header textsize3 stuck">Languages and Skills</div>
+          <div id="skills_sticky_header_unstuck" class="sticky_header textsize3 ">Languages and Skills</div>
           <span class="gap"></span>
           <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
           <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code at <a href="https://github.com/Caitlyn-Milne/Portfolio">https://github.com/Caitlyn-Milne/Portfolio</a></span> <br><br>
@@ -43,7 +43,17 @@
         <div id="contacts_div" class="hidden">
           email: me@caitlynmilne.com <br>
           phone: +44 7563110345 <br>
+          linkedin: <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">https://linkedin.com/in/caitlyn-milne-b210a1193</a><br>
+          itch.io: <a href="https://cutelyn.itch.io/">https://cutelyn.itch.io/</a><br>
           Domain and code are owned by caitlyn milne
+          <div id="social_media_icons_div">
+            <a href="https://cutelyn.itch.io/">
+              <img src="itch_icon.png" alt="itch.io" class="social_media_icon">
+            </a>
+            <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">
+              <img src="linkedin_icon.png" alt="linkedin" class="social_media_icon">
+            </a>
+          </div>
         </div>
         <span id="contacts_page_background"></span>
           <div style="position:fixed; bottom:1vh; right: 1vw;"> website in development </div>
@@ -65,7 +75,7 @@
         </li>
       </ul>
     </div>
-    <div id="loading_div" style="background-color:black; position:absolute; top:0; bottom:0; left:0; right:0;">  </div>
+    <div id="loading_div" style="">  </div>
   </body>
 
   <!--scripts-->
