--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
           Join me in my development journey!</span>
         </div>
         <div id="skills_div">
-          <div id="skills_sticky_header_stuck" class="sticky_header textsize3 stuck">Languages and Skills</div>
-          <div id="skills_sticky_header_unstuck" class="sticky_header textsize3 ">Languages and Skills</div>
+          <div id="skills_sticky_header_stuck" class="sticky_header textsize3 stuck">
+            Languages and Skills<br>
+            <span class="line light"></span>
+            <span class="line dark"></span>
+          </div>
+          <div id="skills_sticky_header_unstuck" class="sticky_header textsize3 ">
+            Languages and Skills<br>
+            <span class="line light"></span>
+            <span class="line dark"></span>
+          </div>
           <span class="gap"></span>
           <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
           <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code at <a href="https://github.com/Caitlyn-Milne/Portfolio">https://github.com/Caitlyn-Milne/Portfolio</a></span> <br><br>
