--- a/index.html
+++ b/index.html
@@ -53,14 +53,19 @@
           phone: +44 7563110345 <br>
           linkedin: <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">https://linkedin.com/in/caitlyn-milne-b210a1193</a><br>
           itch.io: <a href="https://cutelyn.itch.io/">https://cutelyn.itch.io/</a><br>
+          github:<a href="https://github.com/Caitlyn-Milne">https://github.com/Caitlyn-Milne</a><br>
           Domain and code are owned by caitlyn milne
           <div id="social_media_icons_div">
+            <a href="https://github.com/Caitlyn-Milne">
+              <img src="github_icon.png" alt="github" class="social_media_icon">
+            </a>
             <a href="https://cutelyn.itch.io/">
               <img src="itch_icon.png" alt="itch.io" class="social_media_icon">
             </a>
             <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">
               <img src="linkedin_icon.png" alt="linkedin" class="social_media_icon">
             </a>
+
           </div>
         </div>
         <span id="contacts_page_background"></span>
