--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="author" content="Caitlyn Milne">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> this can be readded when i fix phone scaling properally-->
-    <meta name="description" content="Caitlyn Milne is a apprentice programmer from worcestershire england, which experience in: web design, app development, game development, PHP, SQL (Sequal), HTML, CSS, Javascript (JS), C# (Csharp Cs) and Java">
+    <meta name="description" content="Caitlyn Milne is a apprentice programmer from worcestershire england, which experience in: web design, app development, game development, PHP, SQL (Sequal), HTML, CSS, Javascript (JS), C#(Csharp Cs), .NET and Java">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <div id="about_me_div" class="center">
           <span class="title_text centered_item">Caitlyn Milne</span> <br>
           <span class="opacity title_text centered_item">Programmer</span><br><br>
-          <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, and game development.<br><br>
+          <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, c#, .NET ,and game development.<br><br>
           Join me in my development journey!</span>
         </div>
         <div id="skills_div">
@@ -44,8 +44,8 @@
           <span class="textsize1p5 textgrey">I have done lots of work on java when creating android apps, as such android and java has become my most comfortable skills</span><br><br>
           <span class="gap"></span>
           <span id="skills_page_title_exit_marker"></span><br>
-          <span class="textsize2">C# and game development</span><br>
-          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language.</span>
+          <span class="textsize2">C#, .NET, and game development</span><br>
+          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language. Ive also made some games from scratch using .NET.</span>
 
         </div>
         <div id="contacts_div" class="hidden">
