--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="gap"></span>
           <span id="skills_page_title_exit_marker"></span><br>
           <span class="textsize2">C#, .NET, and game development</span><br>
-          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language. Ive also made some games from scratch using .NET.</span>
+          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language. Ive also made some games from scratch using .NET (Monogame).</span>
 
         </div>
         <div id="contacts_div" class="hidden">
