--- a/index.html
+++ b/index.html
@@ -1,75 +1,170 @@
 <html>
   <head>
-    <meta name="author" content="Caitlyn Milne">
+    <title>Caitlyn Milne Portfolio</title>
+    <meta name="author" content="Caitlyn Milne" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> this can be readded when i fix phone scaling properally-->
-    <meta name="description" content="Caitlyn Milne is a apprentice programmer from worcestershire england, which experience in: web design, app development, game development, PHP, SQL (Sequal), HTML, CSS, Javascript (JS), C#(Csharp Cs), .NET and Java">
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet" >
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
-    <style>
-      @import url("./styles.css");
-    </style>
+    <meta
+      name="description"
+      content="Caitlyn Milne is a apprentice programmer from worcestershire england, which experience in: web design, app development, game development, PHP, SQL (Sequal), HTML, CSS, Javascript (JS), C#(Csharp Cs), .NET and Java"
+    />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+      integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
+      integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
+      integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./styles.css?v=3" />
   </head>
 
   <body>
     <div id="page_content_parent">
       <div id="page_content">
         <div id="about_me_div" class="center">
-          <span class="title_text centered_item">Caitlyn Milne</span> <br>
-          <span class="opacity title_text centered_item">Programmer</span><br><br>
-          <span class="textsize1p5 centered_item" style="padding-bottom:1em">Hi Im Caitlyn, I am an apprentice programmer with experience in, web design, android, databases, c#, .NET ,and game development.<br><br>
-          Join me in my development journey!</span>
+          <span class="title_text centered_item">Caitlyn Milne</span> <br />
+          <span class="opacity title_text centered_item">Programmer</span
+          ><br /><br />
+          <span class="textsize1p5 centered_item" style="padding-bottom: 1em">
+            Hi Im Caitlyn, I am a programmer with over 3 years experience in,
+            web design, android, databases, c#, .NET ,and game development.<br /><br />
+            Join me in my development journey!</span
+          >
         </div>
         <div id="skills_div">
-          <div id="skills_sticky_header_stuck" class="sticky_header textsize3 stuck">
-            Languages and Skills<br>
+          <div
+            id="skills_sticky_header_stuck"
+            class="sticky_header textsize3 stuck"
+          >
+            Languages and Skills<br />
             <span class="line light"></span>
             <span class="line dark"></span>
           </div>
-          <div id="skills_sticky_header_unstuck" class="sticky_header textsize3 ">
-            Languages and Skills<br>
+          <div
+            id="skills_sticky_header_unstuck"
+            class="sticky_header textsize3"
+          >
+            Languages and Skills<br />
             <span class="line light"></span>
             <span class="line dark"></span>
           </div>
           <span class="gap"></span>
-          <span class="textsize2" id="skills_first_element">HTML CSS and JS</span> <br>
-          <span class="textsize1p5 textgrey">During development of a few websites, I have become confident in my HTML CSS and JS abilities. An example in which I used these skills was when creating this very site, feel free to have a look at my code at <a href="https://github.com/Caitlyn-Milne/Portfolio">https://github.com/Caitlyn-Milne/Portfolio</a></span> <br><br>
+          <span class="textsize2" id="skills_first_element">
+            HTML CSS and JS
+          </span>
+          <br />
+          <span class="textsize1p5 textgrey"
+            >During development of a few websites, I have become confident in my
+            HTML CSS and JS abilities. An example in which I used these skills
+            was when creating this very site, feel free to have a look at my
+            code at
+            <a href="https://github.com/Caitlyn-Milne/Portfolio"
+              >https://github.com/Caitlyn-Milne/Portfolio</a
+            ></span
+          >
+          <br /><br />
           <span class="gap"></span>
-          <span class="textsize2">PHP and SQL</span><br>
-          <span class="textsize1p5 textgrey">As a part of work ive had to use PHP and SQL. This was when needing to run C.R.U.D statements for a website and an app. I also used PHP to hide sensitive information / functionality from a user.</span> <br><br>
+          <span class="textsize2">PHP and SQL</span><br />
+          <span class="textsize1p5 textgrey"
+            >As a part of work ive had to use PHP and SQL. This was when needing
+            to run C.R.U.D statements for a website and an app. I also used PHP
+            to hide sensitive information / functionality from a user.</span
+          >
+          <br /><br />
           <span class="gap"></span>
-          <span class="textsize2">Android and java</span><br>
-          <span class="textsize1p5 textgrey">I have done lots of work on java when creating android apps, as such android and java has become my most comfortable skills</span><br><br>
+          <span class="textsize2">Android and java</span><br />
+          <span class="textsize1p5 textgrey"
+            >I have done lots of work on java when creating android apps, as
+            such android and java has become my most comfortable skills</span
+          ><br /><br />
           <span class="gap"></span>
-          <span id="skills_page_title_exit_marker"></span><br>
-          <span class="textsize2">C#, .NET, and game development</span><br>
-          <span class="textsize1p5 textgrey">During my free time, I occasionally like to make games, this is normally done using unity and C#. When creating games, I try and push myself to learn new stuff with in the engine and the programming language. Ive also made some games from scratch using .NET (Monogame).</span>
-
+          <span id="skills_page_title_exit_marker"></span><br />
+          <span class="textsize2">C#, .NET, and game development</span><br />
+          <span class="textsize1p5 textgrey"
+            >During my free time, I occasionally like to make games, this is
+            normally done using unity and C#. When creating games, I try and
+            push myself to learn new stuff with in the engine and the
+            programming language. Ive also made some games from scratch using
+            .NET (Monogame).</span
+          >
+        </div>
+        <div id="projects_div" class="">
+          <div id="gamedev_introduction">
+            <span class="textsize2">Game Development</span>
+            <br />
+            <span class="textsize1p5 textgrey">
+              Developing Video Games Since a young age, I have had a passion for
+              games. This passion has led me to developing my own game projects
+              with others and by myself. I currently use mono-game (.NET) and
+              unity (.NET based) for my game projects, but these haven't been
+              the only engine/ framework I have used. Game development has given
+              me the opportunity to learn and apply concepts, such as: Node
+              trees, Pathfinding, Matrixes, Vectors, Velocity, PID control, 3D
+              modelling, Shader programming, Input management, Pixel art, User
+              interface design, HCI concepts and more
+            </span>
+          </div>
+          <div id="train_image"></div>
         </div>
         <div id="contacts_div" class="hidden">
-          email: me@caitlynmilne.com <br>
-          phone: +44 7563110345 <br>
-          linkedin: <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">https://linkedin.com/in/caitlyn-milne-b210a1193</a><br>
-          itch.io: <a href="https://cutelyn.itch.io/">https://cutelyn.itch.io/</a><br>
-          github:<a href="https://github.com/Caitlyn-Milne"> https://github.com/Caitlyn-Milne</a><br>
+          email: me@caitlynmilne.com <br />
+          phone: +44 7563110345 <br />
+          linkedin:
+          <a href="https://linkedin.com/in/caitlyn-milne-b210a1193"
+            >https://linkedin.com/in/caitlyn-milne-b210a1193</a
+          ><br />
+          itch.io:
+          <a href="https://cutelyn.itch.io/">https://cutelyn.itch.io/</a><br />
+          github:<a href="https://github.com/Caitlyn-Milne">
+            https://github.com/Caitlyn-Milne</a
+          ><br />
           Domain and code are owned by caitlyn milne
           <div id="social_media_icons_div">
             <a href="https://github.com/Caitlyn-Milne">
-              <img src="github_icon.png" alt="github" class="social_media_icon">
+              <img
+                src="images/github_icon.png"
+                alt="github"
+                class="social_media_icon"
+              />
             </a>
             <a href="https://cutelyn.itch.io/">
-              <img src="itch_icon.png" alt="itch.io" class="social_media_icon">
+              <img
+                src="images/itch_icon.png"
+                alt="itch.io"
+                class="social_media_icon"
+              />
             </a>
             <a href="https://linkedin.com/in/caitlyn-milne-b210a1193">
-              <img src="linkedin_icon.png" alt="linkedin" class="social_media_icon">
+              <img
+                src="images/linkedin_icon.png"
+                alt="linkedin"
+                class="social_media_icon"
+              />
             </a>
-
           </div>
         </div>
         <span id="contacts_page_background"></span>
-          <div style="position:fixed; bottom:1vh; right: 1vw;"> website in development </div>
+        <div style="position: fixed; bottom: 1vh; right: 1vw">
+          website in development
+        </div>
       </div>
     </div>
     <div id="side_bar" class="rotate">
@@ -78,17 +173,23 @@
           <a class="nav-link" href="#!" id="contacts_nav_item">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#!" id="projects_nav_item">Projects</a>
+          <a class="nav-link disabled" href="#!" id="projects_nav_item"
+            >Projects</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!" id="skills_nav_item">Languages and Skills</a>
+          <a class="nav-link" href="#!" id="skills_nav_item"
+            >Languages and Skills</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#!" id="about_me_nav_item">About me</a>
+          <a class="nav-link active" href="#!" id="about_me_nav_item"
+            >About me</a
+          >
         </li>
       </ul>
     </div>
-    <div id="loading_div" style="">  </div>
+    <div id="loading_div" style=""></div>
   </body>
 
   <!--scripts-->
